SubVersion: $Id$

To do:
	Transfers resumable.

- 09/06/2005, version 0.01 (0.0.1, 0.0.1, 0.0.1): roms
	Use new TiLP-II framework (libti*2)


=============[ TiLP II starts here ]==============

- 26/05/2005, version 6.79 (3.9.2, 0.6.5, 4.5.9): jb
	Images in EPS/PDF files now compressed if zlib is available and
	ASCII85-encoded.
	Updated version in configure.ac to 6.79.

- 24/05/2005, version 6.79 (3.9.2, 0.6.4, 4.5.9): jb
	Added PDF/EPS image support for screenshots.

- 28/02/2005, version 6.78 (3.8.8, 0.6.2, 4.5.7): roms
	Fixed creation of /usr/lib/tilp directory.
	Fixed 'Help->User's manual item'.
	ROM dump for TI83+/84+ SilverEdition is now complete but may not work.
	Improved go_to_bookmark.
	Updated obsoleted bookmarks.

- 29/01/2005, version 6.77 (3.8.7, 0.6.1, 4.5.6): roms
	Added full FLASH support for TI89 Titanium.
	Added full FLASH support for TI84+. This might have broken TI83+ 
	support.

- 02/10/2004, version 6.76 (3.8.7, 0.6.1, 4.5.5): roms
	Thanks to "Benjamin Moody" <bmoody@WPI.EDU> for his new TI83+/TI84+ ROM dumper.
	Bug fixed in the action box (overwrite/rename variables).
	Log file location improved by Julien Blache <jb@jblache.org>.

- 18/09/2004, version 6.75 (3.8.6, 0.6.1, 4.5.4): roms
	Added TI84+ and TI89 Titanium support thru std I/O port (linkport).
	OS upgrade does not work on both models !
	Need to add new ROM dumper.

- 22/08/2004, version 6.74c (3.8.6, 0.6.0, 4.5.3): roms 
	Rebuild to use a new GTK+/Win32 package. The previous one was abandonned and conflicts with The GiMP.

- 02/07/2004, version 6.74b (3.8.6, 0.5.9, 4.5.3): roms 
	Fixed a bug reported in the forum: TiLP crashes when parsing a folder which contains dots
	(such as 'a1.2').

- 29/06/2004, version 6.74 (3.8.6, 0.5.9, 4.5.3): roms
	Checked possible bugs reported on TI89 AMS 2.05 by Lionel Debroux <lionel_debroux@yahoo.fr>:
	- warning with PortTalk (mis-installed): not reproducted.
	- change settings set an error: not reproduced.